# lib/api-spec/openapi.yaml
@@ -54,7 +54,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateKeyBody"
+              $ref: "#/components/schemas/KeyInput"
       responses:
         "201":
           description: Key created
@@ -108,7 +108,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UpdateKeyBody"
+              $ref: "#/components/schemas/KeyUpdate"
       responses:
         "200":
           description: Key updated
@@ -240,7 +240,7 @@ components:
         - createdAt
         - updatedAt
 
-    CreateKeyBody:
+    KeyInput:
       type: object
       properties:
         name:
@@ -253,7 +253,7 @@ components:
         - name
         - apiKey
 
-    UpdateKeyBody:
+    KeyUpdate:
       type: object
       properties:
         name:
